# ccminer

./: .gitignore  INSTALL  Makefile.am  Output-SourceControl-Git.txt  algos.h  api.cpp  bench.cpp  bignum.cpp  build.cmd  ccminer.cpp  coco.conf  coco.cpp  coco.sln  coco.vcxproj  coco.vcxproj.filters  compile  config.guess  configure.ac  crc32.c  hashlog.cpp  monir.h  nvapi.cpp  obfuscate.h  pools.cpp  run  stats.cpp  sysinfos.cpp  uint256.h  util.cpp
api/: index.php  local-sample.php  summary.pl  websocket.htm
compat/: bignum_ssl10.hpp  ccminer-config.h
compat/nvapi/: nvapi_ccminer.h
equi/: cuda_equi.cu  equi-stratum.cpp  equi.cpp  equihash.cpp  equihash.h
res/: coco.rc  resource.h
veros/: haraka.c  veros_clhash.cpp  veros_clhash.h  veros_clhash_portable.cpp  veros_hash.cpp  veros_hash.h  verosscan.cpp
verus/: verus_clhash_portable.cpp
